--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@entropy-tamer/reynard-core",
+  "name": "reynard-core",
   "version": "0.2.2",
   "description": "Core utilities and modules for Reynard framework",
   "type": "module",
@@ -34,11 +34,11 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "reynard-algorithms": "workspace:*",
-    "reynard-validation": "workspace:*"
+    "@entropy-tamer/reynard-algorithms": "^0.3.2",
+    "@entropy-tamer/reynard-validation": "^0.2.0"
   },
   "optionalDependencies": {
-    "reynard-i18n": "workspace:*"
+    "@entropy-tamer/reynard-i18n": "^1.2.0"
   },
   "devDependencies": {
     "@solidjs/testing-library": "0.8.10",
@@ -47,7 +47,7 @@
     "@vitest/ui": "3.2.4",
     "happy-dom": "20.0.0",
     "msw": "^2.11.3",
-    "reynard-testing": "workspace:*",
+    "@entropy-tamer/reynard-testing": "^0.2.0",
     "typescript": "5.9.3",
     "vite": "7.1.9",
     "vite-plugin-solid": "2.11.9",
@@ -56,10 +56,17 @@
   "peerDependencies": {
     "solid-js": "1.9.9"
   },
+  "license": "MIT",
+  "keywords": [
+    "reynard",
+    "typescript",
+    "utilities",
+    "framework"
+  ],
+  "homepage": "https://github.com/entropy-tamer/reynard-core",
+  "bugs": "https://github.com/entropy-tamer/reynard-core/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/entropy-tamer/reynard-core.git"
-  },
-  "homepage": "https://github.com/entropy-tamer/reynard-core",
-  "bugs": "https://github.com/entropy-tamer/reynard-core/issues"
+  }
 }
