--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reynard-core",
+  "name": "@entropy-tamer/reynard-core",
   "version": "0.2.2",
   "description": "Core utilities and modules for Reynard framework",
   "type": "module",
@@ -34,11 +34,11 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@entropy-tamer/reynard-algorithms": "^0.44.0",
-    "@entropy-tamer/reynard-validation": "^0.44.0"
+    "@entropy-tamer/reynard-algorithms": "workspace:*",
+    "@entropy-tamer/reynard-validation": "workspace:*"
   },
   "optionalDependencies": {
-    "@entropy-tamer/reynard-i18n": "^0.44.0"
+    "@entropy-tamer/reynard-i18n": "workspace:*"
   },
   "devDependencies": {
     "@solidjs/testing-library": "0.8.10",
@@ -47,7 +47,7 @@
     "@vitest/ui": "3.2.4",
     "happy-dom": "20.0.0",
     "msw": "^2.11.3",
-    "@entropy-tamer/reynard-testing": "^0.44.0",
+    "@entropy-tamer/reynard-testing": "workspace:*",
     "typescript": "5.9.3",
     "vite": "7.1.9",
     "vite-plugin-solid": "2.11.9",
@@ -55,18 +55,5 @@
   },
   "peerDependencies": {
     "solid-js": "1.9.9"
-  },
-  "license": "MIT",
-  "keywords": [
-    "reynard",
-    "typescript",
-    "utilities",
-    "framework"
-  ],
-  "homepage": "https://github.com/entropy-tamer/reynard-core",
-  "bugs": "https://github.com/entropy-tamer/reynard-core/issues",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/entropy-tamer/reynard-core.git"
   }
 }
