--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@entropy-tamer/reynard-algorithms": "0.3.2",
-    "@entropy-tamer/reynard-validation": "0.2.0"
+    "@entropy-tamer/reynard-algorithms": "^0.44.22",
+    "@entropy-tamer/reynard-validation": "^0.44.22"
   },
   "optionalDependencies": {
-    "@entropy-tamer/reynard-i18n": "^0.44.21"
+    "@entropy-tamer/reynard-i18n": "^0.44.22"
   },
   "devDependencies": {
     "@solidjs/testing-library": "0.8.10",
@@ -47,7 +47,7 @@
     "@vitest/ui": "3.2.4",
     "happy-dom": "20.0.8",
     "msw": "^2.11.6",
-    "@entropy-tamer/reynard-testing": "0.2.0",
+    "@entropy-tamer/reynard-testing": "^0.44.22",
     "typescript": "5.9.3",
     "vite": "7.1.11",
     "vite-plugin-solid": "2.11.10",
