--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,48 @@
-# Dependencies
+# Reynard Public Package .gitignore
+# This file is used as a template for all published packages
+
+# Build outputs
+dist/
+build/
+out/
+*.tsbuildinfo
+
+# Package archives
+*.tgz
+*.tar.gz
+
+# Compiled JavaScript
+*.js
+*.js.map
+*.cjs
+*.cjs.map
+*.mjs
+*.mjs.map
+
+# TypeScript declarations (keep source, remove compiled)
+*.d.ts
+*.d.ts.map
+
+# Node modules
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Build outputs
-dist/
-build/
-*.tsbuildinfo
-*.js.map
-*.d.ts.map
+# Package manager files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
-# Test coverage and reports
-coverage/
-.nyc_output/
-.vitest-reports/
-test-results/
-playwright-report/
-playwright/.cache/
-
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDE files
+# IDE and editor files
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# OS files
+# OS generated files
 .DS_Store
 .DS_Store?
 ._*
@@ -44,13 +52,8 @@ ehthumbs.db
 Thumbs.db
 
 # Logs
-*.log
 logs/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+*.log
 
 # Runtime data
 pids/
@@ -58,20 +61,92 @@ pids/
 *.seed
 *.pid.lock
 
-# Backup files
-*.backup
-package.json.backup.*
-*.bak
-*.tmp
-*.temp
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
 
-# Cache directories
+# nyc test coverage
+.nyc_output/
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+.env.local
+.env.production
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+
+# Gatsby files
 .cache/
-.parcel-cache/
-.next/
-.nuxt/
-.vuepress/dist
+public
+
+# Storybook build outputs
+.out
+.storybook-out
 
 # Temporary folders
 tmp/
 temp/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Test artifacts
+test-results/
+playwright-report/
+playwright/.cache/
+.vitest-reports/
+
+# Build tools
+.turbo/
+.vercel/
+
+# Local development
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Mappy-specific exclusions
+# Runtime data directories that should not be committed
+data/
+mappy-core/data/
